src/solidbench.scss
/* ... */
.music {

  .music-overview {
    @extend .flex-wrap-card-container;
  }

  .playlists {
    @extend .hFlow;
    background-color: var(--theme-back2);
    border-radius: 5px;
    margin: 5px;

    .playlists-list {
      flex: 0 1 fit-content;
      max-width: 30%;

      border-right: 1px solid var(--theme-border2);

      &>div {
        padding: 3px 10px;
        &.selected {
          background-color: var(--theme-selection);
        }
      }
    }

    .playlist-details {
      @extend .paddedPanel;
    }
  }
}

.annotations {

  @import "node_modules/@hilats/annotations-react-ui/scss/annotations.scss";

  .annotations-list {
    @extend .sidenav;
  }

  .resource-viewer {
    .viewer-html {
      background-color: white;
      color: #101010;
      overflow: auto;
    }
  }
}




/**
Copied from web-annotations/annotations-app
 */

.annotationsLayer {
  z-index: 100;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.CodeMirror {
  border: 1px solid #eee;
  height: auto !important;
  width: auto;
}

.react-pdf__Page__textContent {
  top: 0 !important;
  left: inherit !important;
  transform: inherit !important;
}

